--- a/src/src/MessageWire/project.json
+++ b/src/src/MessageWire/project.json
@@ -2,18 +2,18 @@
   "name": "MessageWire",
   "title": "MessageWire",
   "authors": [ "Tyler Jensen" ],
-  "description": "MessageWire is a Zero Knowledge authentication and encryption wrapper for a NetMQ Dealer socket (client) Router socket (server) combination.",
-  "projectUrl": "https://github.com/tylerjensen/MessageWire",
+  "description": "MessageWire is an enhanced Secure Remote Password Protocol wrapper for a NetMQ Dealer socket (client) Router socket (server) combination to enable secure messaging.",
   "packOptions": {
     "iconUrl": "http://tsjensen.com/blog/image.axd?picture=MessageWireLogo.png",
+    "projectUrl": "https://github.com/tylerjensen/MessageWire",
     "licenseUrl": "https://opensource.org/licenses/MIT",
     "copyright": "Tyler Jensen 2016",
     "owners": [ "Tyler Jensen" ],
-    "summary": "MessageWire is a Zero Knowledge authentication and encryption wrapper for a NetMQ Dealer socket (client) Router socket (server) combination.",
-    "releaseNotes": "Written for netstandard1.3 so .NET Framework 4.6 and Core 1.0 and up are supported. Complete and ready for use.",
+    "summary": "MessageWire is a Secure Remote Password Protocol v6 implementation, a kind of zero Knowledge proof, that enables secure authentication and encryption without passing the actual identity key (password) or any other knowledge required to crack the encryption for messages exchanged between client (dealer socket) and server (router socket) using the NetMQ library, a .NET implementation of ZeroMQ.",
+    "releaseNotes": "NetStandard 1.3 supports .NET Framework 4.6 and Core 1.0 and up. This version ready for evaluation. Use in production at your own risk.",
     "tags": [ "TCP", "Messaging", "Zero-Knowledge-Proof", "Secure-Remote-Password-Protocol" ]
   },
-  "version": "1.0.3-*",
+  "version": "1.0.4-*",
 
   "dependencies": {
     "NetMQ": "4.0.0-rc5",
