--- a/src/src/MessageWire/project.json
+++ b/src/src/MessageWire/project.json
@@ -10,13 +10,13 @@
     "copyright": "Tyler Jensen 2016",
     "owners": [ "Tyler Jensen" ],
     "summary": "MessageWire is a Secure Remote Password Protocol v6 implementation, a kind of zero Knowledge proof, that enables secure authentication and encryption without passing the actual identity key (password) or any other knowledge required to crack the encryption for messages exchanged between client (dealer socket) and server (router socket) using the NetMQ library, a .NET implementation of ZeroMQ.",
-    "releaseNotes": "NetStandard 1.3 supports .NET Framework 4.6 and Core 1.0 and up. This version ready for evaluation. Use in production at your own risk.",
+    "releaseNotes": "NetStandard 1.3 supports .NET Framework 4.6 and Core 1.0 and up. Now uses NetMQ 4.0.0.1.",
     "tags": [ "TCP", "Messaging", "Zero-Knowledge-Proof", "Secure-Remote-Password-Protocol" ]
   },
-  "version": "1.0.4-*",
+  "version": "1.1.0-*",
 
   "dependencies": {
-    "NetMQ": "4.0.0-rc5",
+    "NetMQ": "4.0.0.1",
     "NETStandard.Library": "1.6.1"
   },
 
