--- a/src/ZyanPoC/ZyanPoC.csproj
+++ b/src/ZyanPoC/ZyanPoC.csproj
@@ -6,6 +6,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="DryIoc.dll" Version="2.12.1" />
+    <PackageReference Include="DryIoc.MefAttributedModel.dll" Version="3.1.3" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\MessageWire\MessageWire.csproj" />
   </ItemGroup>
 
