--- a/src/ZyanPoC/ZyanPoC.csproj
+++ b/src/ZyanPoC/ZyanPoC.csproj
@@ -6,6 +6,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Castle.Core" Version="4.1.1" />
+    <PackageReference Include="Castle.Core.AsyncInterceptor" Version="1.3.0" />
     <PackageReference Include="DryIoc.dll" Version="2.12.1" />
     <PackageReference Include="DryIoc.MefAttributedModel.dll" Version="3.1.3" />
   </ItemGroup>
