Working around the broken Appveyor's .NET Core test discovery: https://github.com/appveyor/ci/issues/1404

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -6,3 +6,8 @@ before_build:
 - cmd: nuget restore src
 build:
   verbosity: minimal
+test_script:
+- cmd: >-
+    dotnet test src/MessageWire.Tests
+
+    dotnet test src/ZyanPoc.Tests
