--- a/src/ZyanPoC.Tests/ZyanPoC.Tests.csproj
+++ b/src/ZyanPoC.Tests/ZyanPoC.Tests.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="Castle.Core.AsyncInterceptor" Version="1.3.0" />
     <PackageReference Include="DryIoc.dll" Version="2.12.1" />
     <PackageReference Include="DryIoc.MefAttributedModel.dll" Version="3.1.3" />
+    <PackageReference Include="Hyperion" Version="0.9.6" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.3.0" />
     <PackageReference Include="xunit" Version="2.2.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.2.0" />
