--- a/src/ZyanPoC/ZyanPoC.csproj
+++ b/src/ZyanPoC/ZyanPoC.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="Castle.Core.AsyncInterceptor" Version="1.3.0" />
     <PackageReference Include="DryIoc.dll" Version="2.12.1" />
     <PackageReference Include="DryIoc.MefAttributedModel.dll" Version="3.1.3" />
+    <PackageReference Include="Hyperion" Version="0.9.6" />
   </ItemGroup>
 
   <ItemGroup>
